feat: Update API documentation
