# back-end/models/apiResponse.go
@@ -5,3 +5,8 @@ type ApiResponse[T any] struct {
 	Data    T      `json:"Data,omitempty"`
 	Message string `json:"Message,omitempty"`
 }
+
+type ApiErrorResponse struct {
+	Success bool   `json:"Success"`
+	Message string `json:"Message,omitempty"`
+}
